# kaggle-openai-to-z-challenge

./: .gitignore  README.md  READMEfarytale.md  pyproject.toml
data/output/: known_sites_lit_output.txt  known_sites_output.txt  known_sites_wiki_output.txt  unknown_sites_lit_output.txt  unknown_sites_output.txt
notebooks/: eda.ipynb
src/: build_vectorstore.py
src/openai_to_z_challenge/: build_vectorstore.py
src/openai_to_z_challenge/studio/: agent.py  requirements.txt
src/prompts/: extract_known_sites_lit_prompt.txt  extract_known_sites_wiki_prompt.txt  rag_agent_prompt.txt  review_known_sites_wiki_prompt.txt  review_rag_agent_prompt.txt
src/studio/: agent.py  agent_links.py  agent_literature.py  agent_wiki.py  langgraph.json
